ladminai-appointment/main/default/objects/Scheduler_Location_Resource__c/Scheduler_Location_Resource__c.object-meta.xml
<CustomObject>
    <description>Active association between an existing Scheduler doctor and a standard Salesforce Location.</description>
    <label>Scheduler Location Resource</label>
    <nameField>
        <displayFormat>SLR-{00000}</displayFormat>
        <label>Scheduler Location Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduler Location Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>