ladminai-appointment/main/default/objects/Scheduler_Location_Resource__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Scheduler Doctor Associations</relationshipLabel>
    <relationshipName>Scheduler_Doctor_Associations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>