ladminai-appointment/main/default/objects/Scheduler_Location_Resource__c/fields/Location_Resource_Key__c.field-meta.xml
<CustomField>
    <fullName>Location_Resource_Key__c</fullName>
    <externalId>true</externalId>
    <label>Location Resource Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>