ladminai-appointment/main/default/objects/Scheduler_Location_Resource__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Service_Resource__c</referenceTo>
    <relationshipLabel>Scheduler Locations</relationshipLabel>
    <relationshipName>Scheduler_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>